# Website

./: .gitignore  README.md  start-dev.sh
backend/: main.py  pyproject.toml
backend/app/: __init__.py  fileshare.py  views.py
backend/app/content/projects/: frontend-runtime-markdown.md  personal-website-platform.md
backend/app/static/json/: course_data.json  physics_courses.json
deployment/: .terraform.lock.hcl  cloudflare.tf  flaskapp.service.tftpl  main.tf  nginx.conf.tftpl  nginx.tftpl  nginx_api_proxy_params.conf.tftpl  secrets.tf  startup.sh.tftpl  tf.sh  variables.tf  versions.tf
documentation/: ARCHITECTURE.md  DEPLOYMENT.md  IMPLEMENTATION.md  README.md  RUNBOOK.md  UTILITIES.md  api-contracts.md  backend.md  deployment.md  development.md  frontend.md  known-gaps.md  known-issues.md  operations-runbook.md  project-overview.md  scheduler.md  site-case-study.md  technical-architecture.md  vm-update.md  writeup-checklist.md
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json
frontend/public/: robots.txt
frontend/public/scheduler/: course_data.json
frontend/src/: App.svelte  app.css
frontend/src/lib/: router.ts
frontend/src/lib/aboutYou/: api.ts  interactionStore.ts
frontend/src/lib/components/: Nav.svelte
frontend/src/lib/fileshare/: api.ts
frontend/src/lib/projects/: api.ts  renderMarkdown.ts  types.ts
frontend/src/pages/: About.svelte  AboutYou.svelte  Contact.svelte  Home.svelte  ProjectDetail.svelte  Projects.svelte  Utilities.svelte  UtilityFileShare.svelte  UtilityScheduler.svelte
(+3 files in other folders)
